--- a/kblpp.tex
+++ b/kblpp.tex
@@ -479,6 +479,7 @@ Maintaining a prefix forest during a program's execution would be too costly: we
 %\noindent A prefix forest ${\cal F}(L)$ compactly encodes all sequences in $L$, by representing only once common prefixes and repetitions of the same sequences in $L$.
 
 \subsection{Comparison with Related Work}
+\label{ss:kblpp-related}
 
 The seminal work of Ball and Larus~\cite{Ball96} has spawned much research interest in the development of new path profiling techniques in the last 15 years. In particular, several works focus on profiling acyclic paths with a lower overhead by using sampling techniques~\cite{Bond05,Bond05b} or choosing a subset of {\em interesting} paths~\cite{Apiwattanapong02,Joshi04,Vaswani07}.
 %or using one-time instrumentation that is later removed~\cite{Structural Path Profiling};
