--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1965,6 +1965,73 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@ARTICLE{Arnold05, 
+  author = {M. Arnold and S. J. Fink and D. Grove and M. Hind and P. F. Sweeney}, 
+  journal = {Proceedings of the IEEE}, 
+  title = {{A Survey of Adaptive Optimization in Virtual Machines}}, 
+  year = {2005}, 
+  volume = {93}, 
+  number = {2}, 
+  pages = {449-466}, 
+  keywords = {optimisation;optimising compilers;virtual machines;adaptive optimization systems;automatic memory management;feedback directed optimization;modular program representations;online monitoring;online profiling;production level technology;runtime compilation;software performance evaluation;static optimizers;virtual machines;Adaptive systems;Condition monitoring;Costs;Memory management;Optimized production technology;Production systems;Runtime;Security;Virtual machine monitors;Virtual machining;Adaptive optimization;dynamic optimization;feedback-directed optimization (FDO);virtual machines}, 
+  doi = {10.1109/JPROC.2004.840305}, 
+  ISSN = {0018-9219}, 
+  month = {Feb}
+}
+
+@inproceedings{Whaley01,
+  author = {Whaley, John},
+  title = {{Partial Method Compilation Using Dynamic Profile Information}},
+  booktitle = {Proceedings of the 16th ACM SIGPLAN Conference on Object-oriented Programming, Systems, Languages, and Applications},
+  series = {OOPSLA '01},
+  year = {2001},
+  isbn = {1-58113-335-9},
+  location = {Tampa Bay, FL, USA},
+  pages = {166--179},
+  numpages = {14},
+  url = {http://doi.acm.org/10.1145/504282.504295},
+  doi = {10.1145/504282.504295},
+  acmid = {504295},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@inproceedings{Hauswirth04,
+  author = {Hauswirth, Matthias and Sweeney, Peter F. and Diwan, Amer and Hind, Michael},
+  title = {{Vertical Profiling: Understanding the Behavior of Object-priented Applications}},
+  booktitle = {Proceedings of the 19th Annual ACM SIGPLAN Conference on Object-oriented Programming, Systems, Languages, and Applications},
+  series = {OOPSLA '04},
+  year = {2004},
+  isbn = {1-58113-831-8},
+  location = {Vancouver, BC, Canada},
+  pages = {251--269},
+  numpages = {19},
+  url = {http://doi.acm.org/10.1145/1028976.1028998},
+  doi = {10.1145/1028976.1028998},
+  acmid = {1028998},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {hardware performance monitors, perturbation, software performance monitors, vertical profiling, whole-system analysis}
+}
+
+@inproceedings{Schneider07,
+  author = {Schneider, Florian T. and Payer, Mathias and Gross, Thomas R.},
+  title = {{Online Optimizations Driven by Hardware Performance Monitoring}},
+  booktitle = {Proceedings of the 28th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  series = {PLDI '07},
+  year = {2007},
+  isbn = {978-1-59593-633-2},
+  location = {San Diego, California, USA},
+  pages = {373--382},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/1250734.1250777},
+  doi = {10.1145/1250734.1250777},
+  acmid = {1250777},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {Java, dynamic optimization, hardware performance monitors, just-in-time compilation}
+}
+
 %% MISC (URLs)
 @misc{perf,
   author = {{perf: {Linux} profiling with performance counters}},
