--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1702,6 +1702,41 @@
   keywords = {dynamic languages, java, javascript, language implementation, optimization, virtual machine}
 }
 
+@inproceedings{Wurthinger12,
+  author = {W\"{u}rthinger, Thomas and W\"{o}\ss, Andreas and Stadler, Lukas and Duboscq, Gilles and Simon, Doug and Wimmer, Christian},
+  title = {{Self-optimizing AST Interpreters}},
+  booktitle = {Proceedings of the 8th Symposium on Dynamic Languages},
+  series = {DLS '12},
+  year = {2012},
+  isbn = {978-1-4503-1564-7},
+  location = {Tucson, Arizona, USA},
+  pages = {73--82},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/2384577.2384587},
+  doi = {10.1145/2384577.2384587},
+  acmid = {2384587},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {dynamic languages, java, javascript, language implementation, optimization, virtual machine}
+}
+
+@inproceedings{Kalibera14,
+  author = {Kalibera, Tomas and Maj, Petr and Morandat, Floreal and Vitek, Jan},
+  title = {{A Fast Abstract Syntax Tree Interpreter for R}},
+  booktitle = {Proceedings of the 10th ACM SIGPLAN/SIGOPS International Conference on Virtual Execution Environments},
+  series = {VEE '14},
+  year = {2014},
+  isbn = {978-1-4503-2764-0},
+  location = {Salt Lake City, Utah, USA},
+  pages = {89--102},
+  numpages = {14},
+  url = {http://doi.acm.org/10.1145/2576195.2576205},
+  doi = {10.1145/2576195.2576205},
+  acmid = {2576205},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {lazy evaluation, r language, specialization}
+} 
 
 @inproceedings{Duboscq13,
   author = {Duboscq, Gilles and W\"{u}rthinger, Thomas and Stadler, Lukas and Wimmer, Christian and Simon, Doug and M\"{o}ssenb\"{o}ck, Hanspeter},
@@ -2030,6 +2065,83 @@
   publisher = {ACM},
   address = {New York, NY, USA},
   keywords = {Java, dynamic optimization, hardware performance monitors, just-in-time compilation}
+}
+
+@article{Ball94,
+  author = {Ball, Thomas and Larus, James R.},
+  title = {{Optimally Profiling and Tracing Programs}},
+  journal = {ACM Transactions on Programming Languages and Systems},
+  issue_date = {July 1994},
+  volume = {16},
+  number = {4},
+  month = jul,
+  year = {1994},
+  issn = {0164-0925},
+  pages = {1319--1360},
+  numpages = {42},
+  url = {http://doi.acm.org/10.1145/183432.183527},
+  doi = {10.1145/183432.183527},
+  acmid = {183527},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {control-flow graph, instruction tracing, instrumentation, profiling}
+}
+
+@article{Bell73,
+  author = {Bell, James R.},
+  title = {{Threaded Code}},
+  journal = {Communications of the ACM},
+  issue_date = {June 1973},
+  volume = {16},
+  number = {6},
+  month = jun,
+  year = {1973},
+  issn = {0001-0782},
+  pages = {370--372},
+  numpages = {3},
+  url = {http://doi.acm.org/10.1145/362248.362270},
+  doi = {10.1145/362248.362270},
+  acmid = {362270},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {compiled code, interpreter, machine code, space tradeoff, subroutine calls, threaded code, time tradeoff}
+}
+
+@inproceedings{Sullivan03,
+  author = {Sullivan, Gregory T. and Bruening, Derek L. and Baron, Iris and Garnett, Timothy and Amarasinghe, Saman},
+  title = {{Dynamic Native Optimization of Interpreters}},
+  booktitle = {Proceedings of the 2003 Workshop on Interpreters, Virtual Machines and Emulators},
+  series = {IVME '03},
+  year = {2003},
+  isbn = {1-58113-655-2},
+  location = {San Diego, California},
+  pages = {50--57},
+  numpages = {8},
+  url = {http://doi.acm.org/10.1145/858570.858576},
+  doi = {10.1145/858570.858576},
+  acmid = {858576},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@article{Aycock03,
+  author = {Aycock, John},
+  title = {A Brief History of Just-in-time},
+  journal = {ACM Comput. Surv.},
+  issue_date = {June 2003},
+  volume = {35},
+  number = {2},
+  month = jun,
+  year = {2003},
+  issn = {0360-0300},
+  pages = {97--113},
+  numpages = {17},
+  url = {http://doi.acm.org/10.1145/857076.857077},
+  doi = {10.1145/857076.857077},
+  acmid = {857077},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {Just-in-time compilation, dynamic compilation}
 }
 
 %% MISC (URLs)
