--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -2144,6 +2144,26 @@
   keywords = {Just-in-time compilation, dynamic compilation}
 }
 
+@article{Futamura99,
+  author = {Futamura, Yoshihiko},
+  title = {{Partial Evaluation of Computation Process\&Mdash;AnApproach to a Compiler-Compiler}},
+  journal = {Higher Order Symbol. Comput.},
+  issue_date = {December 1999},
+  volume = {12},
+  number = {4},
+  month = dec,
+  year = {1999},
+  issn = {1388-3690},
+  pages = {381--391},
+  numpages = {11},
+  url = {http://dx.doi.org/10.1023/A:1010095604496},
+  doi = {10.1023/A:1010095604496},
+  acmid = {609205},
+  publisher = {Kluwer Academic Publishers},
+  address = {Hingham, MA, USA},
+  keywords = {Futamura projections, compiler, interpreter, partial evaluation, program transformation}
+}
+
 %% MISC (URLs)
 @misc{perf,
   author = {{perf: {Linux} profiling with performance counters}},
