--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -2164,6 +2164,37 @@
   keywords = {Futamura projections, compiler, interpreter, partial evaluation, program transformation}
 }
 
+@inproceedings{Marr15,
+  author = {Marr, Stefan and Ducasse, St{\'e}phane},
+  title = {{Tracing vs. Partial Evaluation: Comparing Meta-compilation Approaches for Self-optimizing Interpreters}},
+  booktitle = {Proceedings of the 2015 ACM SIGPLAN International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
+  series = {OOPSLA 2015},
+  year = {2015},
+  isbn = {978-1-4503-3689-5},
+  location = {Pittsburgh, PA, USA},
+  pages = {821--839},
+  numpages = {19},
+  url = {http://doi.acm.org/10.1145/2814270.2814275},
+  doi = {10.1145/2814270.2814275},
+  acmid = {2814275},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {case study, comparison, just-in-time compilation, language implementation, meta-tracing, partial evaluation, self-optimizing interpreters}
+}
+
+@inproceedings{ChevalierBoisvert15,
+  author = {Maxime Chevalier{-}Boisvert and Marc Feeley},
+  title = {Simple and Effective Type Check Removal through Lazy Basic Block Versioning},
+  booktitle = {29th European Conference on Object-Oriented Programming, {ECOOP} 2015, July 5-10, 2015, Prague, Czech Republic},
+  pages = {101--123},
+  year = {2015},
+  url = {http://dx.doi.org/10.4230/LIPIcs.ECOOP.2015.101},
+  doi = {10.4230/LIPIcs.ECOOP.2015.101},
+  timestamp = {Mon, 29 Jun 2015 15:28:15 +0200},
+  biburl = {http://dblp.uni-trier.de/rec/bib/conf/ecoop/Chevalier-Boisvert15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 %% MISC (URLs)
 @misc{perf,
   author = {{perf: {Linux} profiling with performance counters}},
