--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -2195,6 +2195,60 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@article{Holzle96,
+  author = {H\"{o}lzle, Urs and Ungar, David},
+  title = {{Reconciling Responsiveness with Performance in Pure Object-oriented Languages}},
+  journal = {ACM Transactions on Programming Languages and Systems},
+  issue_date = {July 1996},
+  volume = {18},
+  number = {4},
+  month = jul,
+  year = {1996},
+  issn = {0164-0925},
+  pages = {355--400},
+  numpages = {46},
+  url = {http://doi.acm.org/10.1145/233561.233562},
+  doi = {10.1145/233561.233562},
+  acmid = {233562},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {adaptive optimization, pause clustering, profile-based optimization, run-time compilation, type feedback}
+}
+
+@inproceedings{Bacon96,
+  author = {Bacon, David F. and Sweeney, Peter F.},
+  title = {{Fast Static Analysis of C++ Virtual Function Calls}},
+  booktitle = {Proceedings of the 11th ACM SIGPLAN Conference on Object-oriented Programming, Systems, Languages, and Applications},
+  series = {OOPSLA '96},
+  year = {1996},
+  isbn = {0-89791-788-X},
+  location = {San Jose, California, USA},
+  pages = {324--341},
+  numpages = {18},
+  url = {http://doi.acm.org/10.1145/236337.236371},
+  doi = {10.1145/236337.236371},
+  acmid = {236371},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@inproceedings{Dean96,
+  author = {Dean, Jeffrey and DeFouw, Greg and Grove, David and Litvinov, Vassily and Chambers, Craig},
+  title = {{Vortex: An Optimizing Compiler for Object-oriented Languages}},
+  booktitle = {Proceedings of the 11th ACM SIGPLAN Conference on Object-oriented Programming, Systems, Languages, and Applications},
+  series = {OOPSLA '96},
+  year = {1996},
+  isbn = {0-89791-788-X},
+  location = {San Jose, California, USA},
+  pages = {83--100},
+  numpages = {18},
+  url = {http://doi.acm.org/10.1145/236337.236344},
+  doi = {10.1145/236337.236344},
+  acmid = {236344},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
 %% MISC (URLs)
 @misc{perf,
   author = {{perf: {Linux} profiling with performance counters}},
