--- a/state-of-art.tex
+++ b/state-of-art.tex
@@ -51,7 +51,11 @@ JIT compilation is used by modern runtime to gain the benefits of both static co
 \paragraph*{Basic Block Versioning.} Basic Block Versioning (BBV)~\cite{ChevalierBoisvert15} is a JIT compilation technique that generates type-specialized code for basic blocks lazily, interleaving execution and compilation as new type combinations are observed. BBV is simple to implement, can remove redundant type checks from critical code paths, and has recently been extended with simple inter-procedural optimizations. It might be thus an option for VM builders to implement a baseline JIT compiler.
 
 \section{Feedback-Directed Optimization}
-A fully automatic online Feedback-Directed Optimization (FDO) system is the key for continuous optimization in an adaptive runtime. As highligthed in~\cite{Arnold05}, FDO has several advantages: it can overcome limitations of static optimizers by exploiting run-time information that cannot be statically inferred; it enables the runtime to update its decision
+A fully automatic online Feedback-Directed Optimization (FDO) system is the key for continuous optimization in an adaptive runtime. As highligthed in~\cite{Arnold05}, FDO has several advantages: for instance, it can overcome limitations of static optimizers by exploiting run-time information that cannot be statically inferred, and it allows the runtime to change a decision if and when conditions change.
+
+\paragraph*{Inlining.} Replacing a call site with the code of the function it invokes is one of the most widely employed optimization techniques. Inlining can be particularly effective in the context of object-oriented languages, but performing it too aggressively would place a burden on compilation time and code bloat. The implementations of the SELF language~\cite{Holzle92,Holzle96} introduced progressively sophisticated techniques for effective dynamic inlining: in particular, they augmented inlining with type feedback based on types profiled for receivers.
+
+Lessons learned from devirtualization of function calls in statically compiled object oriented languages (e.g., ~\cite{Bacon96,Dean96}) have been precious to implement inlining in the presence of dynamic class loading. For instance, HotSpot performs guarded inlining when class hierarchy analysis suggests a monomorphic call site.
 
 %\section{Performance Profiling}
 %\subsection{Means for Collecting Profiling Information}
